--- a/12.5 tooltip/style.css
+++ b/12.5 tooltip/style.css
@@ -22,14 +22,28 @@ section span[tooltip] {
   border-bottom: dotted 1px #000;
 }
 
-section span[tooltip]:hover::after {
+section span[tooltip]:hover::before {
   content: attr(tooltip);
   background-color: yellow;
   color: #000;
-  border-radius: 5px;
+  border-radius: 50px;
   padding: 5px;
-  top: 1em;
   position: absolute;
   white-space: nowrap;
-  z-index: 2;
+  z-index: 1;
+  bottom: 1.2em;
+  left: 1em;
+  margin-bottom: -0.2em;
+}
+
+section span[tooltip]:hover::after {
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 7px solid yellow;
+  left: 2em;
+  z-index: 1;
 }
